# SCORES

./: .gitignore  README.md  alembic.ini  build-python.py  components.json  forge.config.ts  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts
example_data/: covid-parenting-challenges.csv  covid-parenting-rewards.csv  covidappdata.csv  infectious-disease-concealment.csv  lower class groups.csv  lucid-dreams.csv  preference_misrepresentation_in_residency.csv  qurantine-effects.csv  upper class groups.csv
src/: index.ts  input.css  output.css
src-py/: application_state.py  cache.py  clusterer.py  controller.py  database_manager.py  downloader.py  models.py  requirements.txt
src-py/alt_clustering/: spherical_k_means.py
src-py/utils/: ipc.py  logging.py  utils.py
src/components/: AdaptiveClock.tsx  ClusterSearchbar.tsx  IndeterminateProgressIndicator.tsx  TitleBar.tsx  Tooltip.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  scroll-area.tsx  slider.tsx  (+3 more)
src/download-window/: DownloadManager.tsx  TitleBarDownloadManager.tsx  app.tsx  index.html  preload.ts
src/lib/: config.ts  hooks.ts  models.ts  utils.ts
src/main-window/: app.tsx  index.html  preload.ts  renderer.ts
src/startup-window/: app.tsx  index.html  renderer.ts
src_py/: app_cache.py  application_state.py  clusterer.py  database_manager.py  downloader.py  models.py
src_py/migrations/: env.py
src_py/utils/: logging.py  utils.py
(+18 files in other folders)
