[project]
name = "scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "cairosvg>=2.7.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pyinstaller>=6.12.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.22",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true