[project]
name = "scores"
version = "1.1.5"
description = "Desktop interface for clustering free-text survey response data, using large language model embeddings and clustering algorithms. Includes functionality to determine the optimal number of clusters automatically and visualize the results."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic==1.14",
    "autopep8>=2.3.2",
    "cairosvg>=2.7.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pyinstaller>=6.12.0",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.22",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
